app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-budget
  labels:
    app: ns-budget
spec:
  type: ClusterIP
  selector:
    app: ns-budget
  ports:
    - name: http
      port: 80
      targetPort: http
